ENH: Updated Dockerfile