@@ -1,4 +1,5 @@
 FROM openjdk:8u171-alpine3.7
 RUN apk --no-cache add curl
 COPY build/libs/*-all.jar micronaut-todo-app.jar
-CMD java ${JAVA_OPTS} -jar micronaut-todo-app.jar
+EXPOSE 8080
+CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar micronaut-todo-app.jar
